[FEATURE] post_proto_ocrservice described and added
